--- a/wp-content/themes/ecokaishu/_scss/style.scss
+++ b/wp-content/themes/ecokaishu/_scss/style.scss
@@ -126,3 +126,4 @@ $google: #D34836;
 @import "pages/concierge.scss";
 @import "pages/voice.scss";
 @import "pages/lp.scss";
+@import "pages/unavailable.scss";
