--- a/wp-content/themes/ecokaishu/_scss/pages/_lp.scss
+++ b/wp-content/themes/ecokaishu/_scss/pages/_lp.scss
@@ -1,162 +1,106 @@
+@charset "UTF-8";
+
+article.lp {
+
+background-image: url(assets/img/lp/bg.jpg);
+background-position: center top;
+background-size: 100%;
+background-repeat: no-repeat;
+
+//Mobile
+@media all and (max-width: $maxWidth){
+	background-position: center 11.0rem;
+}
+
 //**********************************************************************
-// .lp
+// Extend class
 //**********************************************************************
-.lp {
 
-	//.icomoon
-	.icomoon{
-		display: inline-block;
-		vertical-align: middle;
-		margin-right: 0.3rem;
-		font-family: icomoon;
-		speak: none;
-	}
+//.icomoon
+.icomoon{
+	display: inline-block;
+	vertical-align: middle;
+	margin-right: 0.3rem;
+	font-family: icomoon;
+	speak: none;
+}
+
+//.point
+.point{
+	display: block;
+	position: absolute;
+	top: 0;
+	left: 50%;
+	width: 50px;
+	height: 50px;
+	margin-top: -25px;
+	margin-left: -25px;
+	padding-top: 13px;
+	@include border-radius(50%);
+	@include box-sizing(border-box);
+	@include rotate(-5deg);
+	color: $white;
+	text-align: center;
+	font-size: $small;
+}
 
 
-	.point{
-		display: block;
-		position: absolute;
-		top: 0;
-		left: 50%;
-		width: 50px;
-		height: 50px;
-		margin-top: -25px;
-		margin-left: -25px;
-		padding-top: 13px;
-		@include border-radius(50%);
-		@include box-sizing(border-box);
-		@include rotate(-5deg);
-		color: $white;
+//**********************************************************************
+// Common settings
+//**********************************************************************
+
+//h3
+h3{
+	margin-bottom: 0;
+	font-size: $biggest;
+	text-align: center;
+}
+
+//.titleSection
+.titleSection{
+	margin-bottom: 2.0rem;
+}
+
+//.txtNote
+.txtNote{
+	//PC
+	@media all and (min-width: $minWidth){
 		text-align: center;
-		font-size: $small;
 	}
+}
 
-
-	.navPage{
-		margin-bottom: 0;
+//.checkContents
+.checkContents {
+	position: relative;
+	margin-top: 3.0rem;
+	padding: 1.0rem;
+	background: rgba($black, .05);
+	.check{
+		@extend .point;
+		background: $pink;
 	}
-
-	.titleSection{
-		margin-bottom: 2.0rem;
-	}
-
-
-	overflow: hidden;
-	padding-top: 0;
-
-	h3 {
-		font-size: $biggest*1.2;
-		text-align: center;
-		margin-bottom: 0.5rem;
-
-		//Mobile
-		@media all and (max-width: $maxWidth){
-			font-size: $big;
-		}
-	}
-
-
-	.txtNote {
-
-		//Mobile
-		@media all and (min-width: $minWidth){
-			text-align: center;
-		}
-
-	}
-
-	.footnote {
-		//text-align: center;
-		//margin: 2rem 0 !important;
-		small {
-			display: block;
-		}
-	}
-
-	.circleTrimming {
-		overflow: hidden;
-		@include border-radius(50%);
-		border: 1px solid rgba($black, .05);
-		background: $gray;
-		display: inline-block;
-	}
-
-	.checkContents {
-
-		position: relative;
-		margin-top: 3.0rem;
-		padding: 1.0rem;
-		background: rgba($black, .05);
-
-		.check{
-			@extend .point;
-			background: $pink;
-		}
-
-		/*
-		float: left;
-		/width: 100%;img {
-			max-width: 400px;
-			&.alignleft {
-				margin-right: 3rem;
-			}
-			&.alignright {
-				margin-left: 3rem;
-			}
-		}
-		p {
-			margin-bottom: 1rem;
-		}
-		table {
-			td {
-				border-bottom: solid 1px rgba($black, .07);
-				padding: 1rem 0;
-			}
-		}
-		//Mobile
-		@media all and (max-width: $maxWidth){
-			width: 90%;
-			img {
-				max-width: 50%;
-				&.alignleft {
-				margin-right: 0.5rem;
-				}
-				&.alignright {
-					margin-left: 0.5rem;
-				}
-			}
-		}*/
-	}
+}
 
 //**********************************************************************
-// .intro
+// .lpIntro
 //**********************************************************************
 
-.intro {
-
-	padding-top: 5rem;
+.lpIntro {
 
 	// h2
 	//**************************************************************
 
 	h2 {
 
-		line-height: 1.1em;
-		font-size: $biggest * 1.7;
-
-		&:before {
-			background:none;
-		}
-
 		.sub{
 			display: block;
-			font-size: $big !important;
 			line-height: 1.1em;
 			margin-bottom: 0.5rem;
 		}
 
 		.main{
 			display: block;
+			line-height: 1.1em;
 			font-weight: bold;
 		}
 
@@ -167,18 +111,7 @@
 
 	.fourcol {
 
-		@include border-radius(6px);
-		background: rgba($white, .3);
 		text-align: center;
-
-		&:hover{
-			background: rgba($black, .05);
-			cursor: pointer;
-		}
-
-		a{
-			color: $darkGray;
-		}
 
 		span[class^="icon-"]{
 			line-height: 0;
@@ -188,31 +121,24 @@
 			font-size: $bigger*2;
 		}
 
-		.txt {
-			margin-top: 2.0rem;
-			font-weight: normal;
-			font-size: 100%;
-		}
-
-		.title {
-			line-height: 1.1em;
-			margin-top: 1.0rem;
-			margin-bottom: 3.0rem;
-			font-size: $biggest;
-		}
 	}
 
 
 	//PC
 	@media all and (min-width: $minWidth){
 
-		background: {
-			image: url("assets/img/area/bg-area.png");
-			position: center top;
-			repeat: no-repeat;
-		}
+		padding-top: 5.0rem;
 
 		h2 {
+
+			margin-bottom: 5.0rem;
+
+			.sub{
+				font-size: $biggest;
+			}
+			.main{
+				font-size: $biggest*2;
+			}
 			.block{
 				display: inline !important;
 			}
@@ -220,7 +146,17 @@
 
 		.fourcol{
 
-			margin-bottom: 5.0rem;
+			padding-left: 1.0rem;
+			padding-right: 1.0rem;
+			padding-bottom: 3.0rem;
+			@include border-radius(6px);
+			background: rgba($white, .5);
+
+		}
+
+		.footnote{
+			display: block;
+			margin-top: 3.0rem !important;
 		}
 
 	}
@@ -228,10 +164,25 @@
 	//Mobile
 	@media all and (max-width: $maxWidth){
 
+		padding-top: 2.0rem;
+
+		h2 {
+
+			margin-bottom: 6.0rem;
+
+			&:before{
+				background: none;
+			}
+			.main{
+				font-size: $biggest * 1.7;
+			}
+		}
+
 		.fourcol {
 
 			margin-bottom: 3.0rem;
-			border: 1px solid rgba($black, .1);
+			padding-bottom: 3.0rem;
+			border-bottom: 1px dashed $gray;
 
 			span[class^="icon-"]{
 				border: 1px solid rgba($black, .1);
@@ -244,208 +195,40 @@
 }
 
 //**********************************************************************
-// .reason
+// .lpCharge
 //**********************************************************************
 
-.reason {
+.lpCharge{
 
-	// .fourcol
-	//**************************************************************
-
-	.fourcol {
-
-		text-align: center;
-
-		span[class^="icon-"]{
-			font-size: $bigger*2.5;
-		}
-
-	}
-
-	//Mobile
-	@media all and (max-width: $maxWidth){
-
-		border-top: 1px solid rgba($black, .1);
-
-		//.fourcol
-		.fourcol{
-			padding-bottom: 2.0rem;
-			margin-bottom: 2.0rem;
-			border-bottom: 1px dashed rgba($black, .1);
-		}
-
-	}
-
-
-}
-
-
-//**********************************************************************
-// .tabs
-//**********************************************************************
-
-.tabs {
-
+	margin-top: 3.0rem;
+	border-top: 1px solid rgba($black, .1);
 
 	// table
 	//**************************************************************
 
 	table{
 
-		font-size: 90%;
-		line-height: 1.3em;
-
+		//h5
 		h5{
 			margin: 0;
-			font-size: 100%;
-			font-weight: normal;
+			font-size: $normal;
+		}
+
+		//tr
+		tr{
+			border-bottom: 1px dotted $gray;
 		}
 
 		// PC
 		@media all and (min-width: $minWidth){
-
-			tr{
-
-				border-bottom: 1px dashed $gray;
-
-				th, td{
-					padding-top: 1.0rem;
-					padding-bottom: 1.0rem;
+			//td
+			td{
+				&:last-of-type{
+					text-align: right;
 				}
-
-
 			}
-
 		}
 
-	}
-
-
-	//.item table
-	//**************************************************************
-
-	.item {
-
-		//table
-		table{
-
-			//.itemEx
-			.itemEx{
-				text-align: left !important;
-			}
-
-			//PC
-			@media all and (min-width: $minWidth){
-
-				tbody{
-
-					tr{
-						&:first-of-type{
-							border-top: 1px dashed $gray;
-						}
-						&:last-of-type{
-							border-bottom-color: transparent;
-						}
-					}
-					td{
-						&:not(:last-of-type){
-							text-align: center;
-						}
-						&:last-of-type{
-							text-align: right;
-							width: 85px;
-
-						}
-					}
-				}
-
-			}
-
-
-			//Mobile
-			@media all and (max-width: $maxWidth){
-
-				tr{
-
-					display: table;
-					width: 100%;
-					table-layout: fixed;
-
-					th, td{
-						display: table-cell;
-						text-align: center;
-					}
-
-				}
-
-				//.itemEx
-				.itemEx{
-					border-top: 1px solid $gray;
-				}
-
-			}
-
-		}
-
-	}
-
-
-	// .chargeList table
-	//**************************************************************
-
-	.chargeList {
-
-		//table
-		table{
-
-			//PC
-			@media all and (min-width: $minWidth){
-
-				th{
-					width: 20%;
-				}
-
-				td{
-
-					&.split{
-						width: 20%;
-						text-align: center;
-					}
-
-					&:last-of-type{
-						width: 15%;
-						text-align: right;
-					}
-
-				}
-
-			}
-
-			//Mobile
-			@media all and (max-width: $maxWidth){
-
-				tr{
-					margin-bottom: 1.0rem;
-				}
-
-			}
-
-
-
-
-		}
-
-	}
-
-
-	// .tabContents
-	//**************************************************************
-
-	.tabContents {
-		padding-bottom: 3.0rem;
-		&:first-of-type{
-			margin-top: 3.0rem;
-		}
 	}
 
 	// .linkMenu
@@ -527,36 +310,14 @@
 
 	}
 
-	// .liquidLayout
+	// .tabContents
 	//**************************************************************
 
-	.liquidLayout{
-
-		padding-bottom: 0;
-
-		// .item
-		.item{
-
-			@include border-radius(6px);
-			margin-bottom: 10px;
-
-			//PC
-			@media all and (min-width: $minWidth){
-
-				width: 360px;
-				padding: 0.5rem;
-
-			}
-
-			//Mobile
-			@media all and (max-width: $maxWidth){
-
-				width:  100% !important;
-
-			}
-
+	.tabContents {
+		margin-bottom: 5.0rem;
+		&:first-of-type{
+			margin-top: 5.0rem;
 		}
-
 	}
 
 	// #itemCharges
@@ -569,13 +330,23 @@
 			text-align: center;
 		}
 
+		//table
+		table{
+			font-size: 90%;
+		}
+
+		//.itemEx
+		.itemEx{
+			line-height: 1.2em;
+			text-align: left !important;
+		}
+
 		//.itemChargesDetails
 		.itemChargesDetails{
-
 			margin-top: 2.0rem;
+			margin-bottom: 20px;
 			padding-top: 1.0rem;
 			border-top: 1px dashed rgba($black, .05);
-
 		}
 
 		//#electricApp
@@ -589,100 +360,245 @@
 				text-align: center;
 			}
 
-			//Mobile
-			@media all and (max-width: $maxWidth){
+		}
 
-				table{
-					th{
-						width: 180px;
+		//PC
+		@media all and (min-width: $minWidth){
+
+			//table
+			table{
+
+				border-top: 1px dotted $gray;
+
+				//tr
+				tr{
+					&:nth-of-type(2n){
+						background: rgba($black, .03);
+					}
+					&:last-of-type{
+						border-bottom-color: transparent;
 					}
 				}
 
 			}
 
+			//.rankCharge
+			.rankCharge{
+				margin-bottom: 20px;
+				padding-left: 0.5rem;
+				padding-right: 0.5rem;
+				padding-bottom: 0.5rem;
+				border: 1px solid $gray;
+				@include border-radius(6px);
+			}
+
+		}
+
+		//Mobile
+		@media all and (max-width: $maxWidth){
+
+			//.rankCharge
+			.rankCharge{
+
+				margin-bottom: 2.0rem;
+				padding-bottom: 2.0rem;
+
+				&:first-of-type{
+					margin-top: 2.0rem;
+				}
+
+				table{
+					tr{
+						display: table;
+						width: 100%;
+						table-layout: fixed;
+						th, td{
+							display: table-cell;
+							text-align: center;
+						}
+					}
+				}
+			}
+
+			//#electricApp
+			#electricApp{
+				th{
+					width: 180px;
+				}
+				td{
+					&:last-of-type{
+						width: 80px;
+						text-align: right;
+						border-bottom: 1px dotted $gray;
+					}
+				}
+			}
+
+			//#itemRank
+			#itemRank{
+				th{
+					width: 180px;
+				}
+				td{
+					&:last-of-type{
+						text-align: right;
+					}
+				}
+			}
+
+
 		}
 
 	}
 
-	// #spworksCharges #optionsCharges
+	// #spworksCharges
 	//**************************************************************
 
-	#spworksCharges,
-	#optionsCharges{
+	#spworksCharges{
 
-		//table
 		table{
 
-			margin-top: 1.0rem;
+			margin-top: 2.0rem;
 			margin-bottom: 2.0rem;
-			border-top: 1px dashed $gray;
+			border-top: 1px dotted $gray;
+
+			//PC
+			@media all and (min-width: $minWidth){
+				th{
+					width: 240px;
+				}
+				td{
+					&:last-of-type{
+						width: 200px;
+					}
+				}
+			}
 
 		}
 
 	}
 
+	// #optionsCharges
+	//**************************************************************
+	#optionsCharges{
 
+		table{
 
+			margin-top: 2.0rem;
+			margin-bottom: 2.0rem;
+			border-top: 1px dotted $gray;
+
+			//PC
+			@media all and (min-width: $minWidth){
+				th{
+					width: 300px;
+				}
+				td{
+					&:last-of-type{
+						width: 80px;
+					}
+					&.split{
+						width: 180px;
+						text-align: right;
+					}
+				}
+			}
+
+		}
+
+	}
 
 }
-
 
 //**********************************************************************
 // .purchase
 //**********************************************************************
 
-.purchase {
+.purchase{
 
-	.threecol {
+	//dl
+	dl {
+		dt {
+			margin-top: 1.0rem;
+			padding: 1.0rem 0 0.5rem 0;
+			font-weight: bold;
+		}
+	}
 
-		margin-top: 2.0rem;
-		padding: 0.5rem;
-		border: 1px solid rgba($black, .1);
-		@include border-radius(6px);
+	//PC
+	@media all and (min-width: $minWidth){
 
 		//h4
-		h4 {
+		h4{
 			text-align: center;
-			margin: 1.0rem 0;
 		}
 
 		//dl
-		dl {
-			dt {
-				padding: 1.0rem 0 0.5rem 0;
-				margin-top: 1.0rem;
-				border-top: solid 1px rgba($black, .1);
-				font-weight: bold;
+		dl{
+			dt{
+				border-top: 1px dotted $gray;
 			}
 		}
+
+		//.threecol
+		.threecol{
+			margin-bottom: 20px;
+			padding-left: 0.5rem;
+			padding-right: 0.5rem;
+			padding-bottom: 1.0rem;
+			border: 1px solid $gray;
+			@include border-radius(6px);
+		}
+
 	}
-}//end .purchase
+
+	//Mobile
+	@media all and (max-width: $maxWidth){
+
+		//.threecol
+		.threecol{
+			display: block;
+			margin-bottom: 3.0rem;
+			padding-bottom: 3.0rem;
+			border-bottom: 1px dashed $gray;
+			&:first-of-type{
+				border: 10px solid;
+			}
+		}
+
+	}
+
+}
 
 //**********************************************************************
-// .estimates
+// .quality
 //**********************************************************************
 
-.estimates {
+.quality {
 
+	//.listStaff
 	.listStaff {
 
 		margin-top: 2.0rem;
 		padding-top: 1.0rem;
 		border-top: 1px dashed rgba($black, .05);
 
-		.item {
+		//.staff
+		.staff{
 			text-align: center;
 			.circleTrimming {
 				display: block;
 				width: 170px;
 				height: 170px;
-				margin: 0 auto;
+				margin-left: auto;
+				margin-right: auto;
+				margin-bottom: 1.0rem;
 			}
 		}
 
 	}
 
-}//end .estimates
+}
 
 //**********************************************************************
 // .achive
@@ -699,10 +615,19 @@
 
 	.listColl{
 		margin-top: 2.0rem;
+		.fourcol{
+			padding-left: 1.0rem;
+			padding-right: 1.0rem;
+		}
 	}
 
 	#owlMedia{
 		margin-top: 2.0rem;
+
+		.circleTrimming {
+			width: 240px;
+			height: 240px;
+		}
 	}
 
 
@@ -711,14 +636,11 @@
 
 		#owlMedia{
 
-			.item{
+			.media{
 
-				padding: 0 10px;
-
-				.circleTrimming {
-					width: 240px;
-					height: 240px;
-				}
+				margin-left: 10px;
+				margin-right: 10px;
+				width: 265px;
 
 			}
 
@@ -734,25 +656,12 @@
 
 				margin-bottom: 2.0rem;
 			}
-
-		}
-
-
-		#owlMedia{
-
-			.item{
-
-				.circleTrimming {
-					width: 170px;
-					height: 170px;
-				}
-
-			}
 		}
 
 	}
 
 }
+
 
 //**********************************************************************
 // .flow
@@ -802,24 +711,6 @@
 	//PC
 	@media all and (min-width: $minWidth){
 
-		#listFlow{
-
-			li{
-
-				&:not(:last-of-type){
-					&:after{
-						position: absolute;
-						top: 43%;
-						right:-25px;
-						color: rgba($black, 0.3);
-						font-family: 'icomoon';
-						font-size: $biggest;
-						content: "\e85a";
-					}
-				}
-			}
-		}
-
 		.checkContents{
 			padding-left: 3.0rem;
 			padding-right: 3.0rem;
@@ -856,7 +747,7 @@
 	.fivecol {
 		position: relative;
 		padding: 1.0rem 1.5rem;
-		border: 1px solid rgba($black, .1);
+		border: 1px solid $gray;
 		@include border-radius (6px);
 	}
 
@@ -870,62 +761,84 @@
 		color: rgba($black, .3);
 	}
 
-}
+	.archiveList{
 
-//**********************************************************************
-// .faq
-//**********************************************************************
+		a{
 
-.faq {
-
-	dl {
-
-		display: block;
-		margin: 0 auto;
-		border-bottom: 1px solid rgba($black, .1);
-
-		dt, dd {
-
+			display: block;
 			position: relative;
-			padding-top: 1.0rem;
-			padding-bottom: 1.0rem;
-			padding-left: 2.0rem;
+			padding-right: 2.0rem;
 
-			&:before{
-				@extend .icomoon;
+			&:after{
 				position: absolute;
-				left: 0;
-				font-size: $bigger;
+				top: 50%;
+				right: 0;
+				margin-top: -12px;
+				@extend .icomoon;
+				content: "\e862";
+			}
+
+			h4{
+				margin-top: 0;
+				margin-bottom: 0.5rem;
+				font-size: $normal;
+				line-height: 1.2em;
+			}
+			.itemInfo{
+				display: inline-block !important;
+				&:before{
+					@extend .icomoon;
+				}
+				&.customer{ &:before{ content: "\e919"; } }
+				&.place{ &:before{ content: "\e8eb"; } }
+				&.items{ &:before{ content: "\e905"; }}
 			}
 
 		}
-
-		dt {
-			border-top: 1px solid rgba($black, .1);
-			border-bottom: 1px dashed rgba($black, .1);
-			&:before{
-				content: "\e813";
-			}
-		}
-
-		dd {
-			&:before{
-				content: "\e805";
-			}
-		}
-
 	}
-
 	//PC
 	@media all and (min-width: $minWidth){
 
-		dl{
-			max-width: $maxWidth;
+		.archiveList{
+			a{
+				padding-right: 160px;
+				.star{
+					position: absolute;
+					top: 50%;
+					right: 30px;
+					margin-top: -12px;
+				}
+			}
 		}
 
 	}
 
+	//Mobile
+	@media all and (max-width: $maxWidth){
+		.archiveList{
+			margin-top: 2.0rem;
+		}
+	}
 
+}
+
+
+//**********************************************************************
+// .listVoices
+//**********************************************************************
+
+.listVoices{
+	dl{
+		//dt
+		dt{
+			margin-top: 1.0rem;
+			margin-bottom: 1.0rem;
+			&:before{
+				@extend .icomoon;
+				content: "\e915";
+			}
+		}
+	}
 }
 
 }
