--- a/wp-content/themes/ecokaishu/_scss/parts/_list.scss
+++ b/wp-content/themes/ecokaishu/_scss/parts/_list.scss
@@ -1,6 +1,19 @@
 @charset "UTF-8";
 
 //**********************************************************************
+// Extend class
+//**********************************************************************
+
+//.icomoon
+.icomoon{
+	display: inline-block;
+	vertical-align: middle;
+	margin-right: 0.3rem;
+	font-family: icomoon;
+	speak: none;
+}
+
+//**********************************************************************
 // .navPage
 //**********************************************************************
 
@@ -60,27 +73,27 @@
 }
 
 //**********************************************************************
-// .definitionList
+// .listDefi
 //**********************************************************************
 
-.definitionList{
+.listDefi{
 
 	//dt
-	dt{
+	> dt{
 		position: relative;
-		padding-left: 0.5rem;
 		&:not(:first-of-type){
 			margin-top: 0.5rem;
 		}
 		&:before{
-			@include arrow(5px, "", 0px, "", 4px, $black, left);
+			@extend .icomoon;
+			content: "\e862";
 		}
 	}
 
 	//dd
 	dd{
 		position: relative;
-		padding-left: 0.5rem;
+		padding-left: 22px;
 		small{
 			color: rgba($black, .7);
 		}
@@ -89,9 +102,22 @@
 			dt{
 				margin-top: 0 !important;
 				&:before{
-					@include arrow(7px, "", 0px, "", 4px, rgba($black, .3), left);
+					@extend .icomoon;
+					color: $green;
+					content: "\e862";
 				}
 			}
+		}
+	}
+
+	> li{
+		position: relative;
+		&:not(:first-of-type){
+			margin-top: 0.5rem;
+		}
+		&:before{
+			@extend .icomoon;
+			content: "\e862";
 		}
 	}
 
