--- a/wp-content/themes/ecokaishu/_scss/pages/_lp.scss
+++ b/wp-content/themes/ecokaishu/_scss/pages/_lp.scss
@@ -195,319 +195,12 @@ h3{
 }
 
 //**********************************************************************
-// .lpCharge
+// #lpPriceDetails
 //**********************************************************************
 
-.lpCharge{
-
+#lpPriceDetails{
 	margin-top: 3.0rem;
 	border-top: 1px solid rgba($black, .1);
-
-	// table
-	//**************************************************************
-
-	table{
-
-		//h5
-		h5{
-			margin: 0;
-			font-size: $normal;
-		}
-
-		//tr
-		tr{
-			border-bottom: 1px dotted $gray;
-		}
-
-		// PC
-		@media all and (min-width: $minWidth){
-			//td
-			td{
-				&:last-of-type{
-					text-align: right;
-				}
-			}
-		}
-
-	}
-
-	// .linkMenu
-	//**************************************************************
-
-	.linkMenu {
-
-		// PC
-		@media all and (min-width: $minWidth){
-
-			margin-bottom: 1.5rem;
-			border-bottom: 1px solid rgba($black, .1);
-
-			//h4, .tab
-			h4, .tab{
-
-				float: left;
-				line-height: 1.0rem !important;
-				width: 175px;
-				margin: 0 !important;
-				padding: 0 !important;
-				border-top: 1px solid rgba($black, .1);
-				border-right: 1px solid rgba($black, .1);
-				font-size: 100%;
-				color: $darkGray;
-
-				&:first-child{
-					border-left: 1px solid rgba($black, .1);
-				}
-
-				a{
-					display: block;
-					padding: 1.0rem 0;
-					text-align: center;
-					color: $darkGray;
-					&:hover{
-						background: rgba($black, .05);
-					}
-				}
-
-			}
-
-			//h4
-			h4{
-
-				//a
-				a{
-					position: relative;
-					background: rgba($green, .1);
-					&:before{
-						position: absolute;
-						top: 0;
-						left: 0;
-						width: 100%;
-						border-top: 3px solid $green;
-						content: "";
-					}
-				}
-
-			}
-
-
-		}
-
-		// Mobile
-		@media all and (max-width: $maxWidth){
-
-			//a
-			a{
-				color: $darkGray;
-			}
-
-			//.tab
-			.tab{
-				display: none;
-			}
-
-		}
-
-	}
-
-	// .tabContents
-	//**************************************************************
-
-	.tabContents {
-		margin-bottom: 5.0rem;
-		&:first-of-type{
-			margin-top: 5.0rem;
-		}
-	}
-
-	// #itemCharges
-	//**************************************************************
-
-	#itemCharges{
-
-		//h6
-		h6{
-			text-align: center;
-		}
-
-		//table
-		table{
-			font-size: 90%;
-		}
-
-		//.itemEx
-		.itemEx{
-			line-height: 1.2em;
-			text-align: left !important;
-		}
-
-		//.itemChargesDetails
-		.itemChargesDetails{
-			margin-top: 2.0rem;
-			margin-bottom: 20px;
-			padding-top: 1.0rem;
-			border-top: 1px dashed rgba($black, .05);
-		}
-
-		//#electricApp
-		#electricApp{
-
-			//span[class^="icon-"]
-			span[class^="icon-"]{
-				display: block;
-				margin: 1rem 0;
-				font-size: $biggest * 2.5;
-				text-align: center;
-			}
-
-		}
-
-		//PC
-		@media all and (min-width: $minWidth){
-
-			//table
-			table{
-
-				border-top: 1px dotted $gray;
-
-				//tr
-				tr{
-					&:nth-of-type(2n){
-						background: rgba($black, .03);
-					}
-					&:last-of-type{
-						border-bottom-color: transparent;
-					}
-				}
-
-			}
-
-			//.rankCharge
-			.rankCharge{
-				margin-bottom: 20px;
-				padding-left: 0.5rem;
-				padding-right: 0.5rem;
-				padding-bottom: 0.5rem;
-				border: 1px solid $gray;
-				@include border-radius(6px);
-			}
-
-		}
-
-		//Mobile
-		@media all and (max-width: $maxWidth){
-
-			//.rankCharge
-			.rankCharge{
-
-				margin-bottom: 2.0rem;
-				padding-bottom: 2.0rem;
-
-				&:first-of-type{
-					margin-top: 2.0rem;
-				}
-
-				table{
-					tr{
-						display: table;
-						width: 100%;
-						table-layout: fixed;
-						th, td{
-							display: table-cell;
-							text-align: center;
-						}
-					}
-				}
-			}
-
-			//#electricApp
-			#electricApp{
-				th{
-					width: 180px;
-				}
-				td{
-					&:last-of-type{
-						width: 80px;
-						text-align: right;
-						border-bottom: 1px dotted $gray;
-					}
-				}
-			}
-
-			//#itemRank
-			#itemRank{
-				th{
-					width: 180px;
-				}
-				td{
-					&:last-of-type{
-						text-align: right;
-					}
-				}
-			}
-
-
-		}
-
-	}
-
-	// #spworksCharges
-	//**************************************************************
-
-	#spworksCharges{
-
-		table{
-
-			margin-top: 2.0rem;
-			margin-bottom: 2.0rem;
-			border-top: 1px dotted $gray;
-
-			//PC
-			@media all and (min-width: $minWidth){
-				th{
-					width: 240px;
-				}
-				td{
-					&:last-of-type{
-						width: 200px;
-					}
-				}
-			}
-
-		}
-
-	}
-
-	// #optionsCharges
-	//**************************************************************
-	#optionsCharges{
-
-		table{
-
-			margin-top: 2.0rem;
-			margin-bottom: 2.0rem;
-			border-top: 1px dotted $gray;
-
-			//PC
-			@media all and (min-width: $minWidth){
-				th{
-					width: 300px;
-				}
-				td{
-					&:last-of-type{
-						width: 80px;
-					}
-					&.split{
-						width: 180px;
-						text-align: right;
-					}
-				}
-			}
-
-		}
-
-	}
-
 }
 
 //**********************************************************************
