--- a/wp-content/themes/ecokaishu/_scss/pages/_price.scss
+++ b/wp-content/themes/ecokaishu/_scss/pages/_price.scss
@@ -1,10 +1,6 @@
 @charset "UTF-8";
 
-article#price{
-
-.contents {
-	border-bottom: none !important;
-}
+article.price{
 
 //**********************************************************************
 // .intro
@@ -120,268 +116,14 @@ article#price{
 
 }
 
+
 //**********************************************************************
-// #ex
+// #priceDetails
 //**********************************************************************
 
-#ex{
-
-	overflow: hidden;
-	margin-top: 3.0rem;
-	border-top: 1px solid rgba($black, .1);
-	border-bottom: none;
-
+#priceDetails{
+	border-top: 1px solid $gray;
 }
-
-//**********************************************************************
-// .linkMenu
-//**********************************************************************
-.linkMenu {
-
-	overflow: hidden;
-	border-bottom: 1px solid rgba($gray, .9);
-	margin-bottom: 30px;
-
-	h3 {
-		font-size: 100%;
-		margin: 0;
-	}
-
-	h3, .tab {
-		float: left;
-		border-top: 1px solid rgba($gray, .9);
-		line-height: normal;
-		a {
-			display: block;
-			width: 185px;
-			text-align: center;
-			padding: 12px 0;
-			border-top: 3px solid transparent;
-			border-left: 1px solid rgba($gray, .9);
-			font-size: $smaller * 1.35;
-			color: $darkGray;
-
-			&.active {
-				background: rgba($green, .1);
-				border-top: 3px solid $green;
-			}
-		}
-		&:last-of-type {
-			a {
-				border-right: 1px solid rgba($gray, .9);
-			}
-		}
-	}
-
-	// Mobile
-	@media all and (max-width: $maxWidth){
-		h3{
-			width: 99%;
-
-			a {
-				width: 100%;
-				border-right: 1px solid rgba($gray, .9);
-			}
-		}
-		.tab {
-			display: none;
-		}
-	}
-}//end .linkMenu
-
-//**********************************************************************
-// #basicCharges
-//**********************************************************************
-#basicCharges, #spworksCharges, #optionsCharges {
-	p {
-		margin: 10px 0;
-	}
-	// PC
-	@media all and (min-width: $minWidth){
-		td, th {
-			border-bottom: 1px solid rgba($gray, .9);
-			padding: 15px 0 15px 20px;
-		}
-		th {
-			width: 20%;
-		}
-		td {
-			&:last-of-type {
-				text-align: right;
-				width: 15%;
-			}
-		}
-		.footnote {
-			margin: 2rem 0 !important;
-		}
-	}
-}
-
-
-//**********************************************************************
-// #itemCharges
-//**********************************************************************
-
-#itemCharges{
-
-	.item {
-		@include border-radius(15px);
-		padding: 0.5rem 1.5rem;
-		width: 31.5789%;
-
-		h5 {
-			font-weight: normal;
-			text-align: center;
-		}
-	}
-
-	// #electricApp
-	//**************************************************************
-
-	#electricApp{
-
-		//span[class^="icon-"]
-		span[class^="icon-"]{
-			display: block;
-			margin: 1rem 0;
-			font-size: $biggest * 2.5;
-			text-align: center;
-		}
-
-	}
-
-	.appendix {
-		font-size: 80%;
-	}
-
-	// PC
-	@media all and (min-width: $minWidth){
-
-		table{
-			th,td{
-				border-top: 1px solid rgba($darkGray, .2);
-				padding: 0.7rem 0.5rem;
-			}
-			th {
-				text-align: left;
-				width: 65%;
-			}
-			td{
-				text-align: right;
-				width: 35%;
-			}
-		}
-
-		#electricApp{
-			thead{
-				th{
-					width: 50%;
-				}
-			}
-		}
-
-		#itemRank{
-			tbody{
-				tr{
-					&:nth-of-type(4n+1){
-						background: rgba($white, .5);
-					}
-					&:nth-of-type(4n+2){
-						background: rgba($white, .5);
-					}
-					td{
-						&[colspan="3"]{
-							font-size: $smaller;
-							text-align: left;
-						}
-					}
-				}
-			}
-		}
-
-	}
-
-	// Mobile
-	@media all and (max-width: $maxWidth){
-
-		table{
-			font-size: $smaller;
-		}
-
-		//.block
-		.block{
-			display: inline !important;
-		}
-
-		.item {
-			padding: 0;
-			border-radius: 0;
-			border: none;
-		}
-
-		//#electricApp
-		#electricApp{
-			thead{
-				display: block;
-				tr{
-					display: table;
-					width: 100%;
-					th{
-						padding: 0.5rem;
-						background: rgba($green, .1);
-						&:first-of-type{
-							width: 62%;
-						}
-					}
-				}
-			}
-			tbody{
-				tr{
-					display: table;
-					width: 100%;
-					th, td{
-						display: table-cell;
-						padding: 0.5rem;
-						border-bottom: 1px solid rgba($black, .1);
-					}
-					th{
-						width: 62%;
-						text-align: left !important;
-					}
-					td{
-						text-align: right !important;
-					}
-				}
-			}
-		}
-
-		//#itemRank
-		#itemRank{
-			tbody{
-				th{
-					text-align: center!important;
-				}
-				td{
-					&:nth-of-type(1):before{ content: "縦・横・奥行の合計 : "; }
-					&:nth-of-type(2):before{ content: "重さ :"; }
-					&:nth-of-type(3):before{ content: "目安となる品物 :"; }
-					&[colspan="3"]{
-						border:{
-							top: 1px solid rgba($black, .1);
-						}
-						font-size: $smaller;
-						text-align: left;
-						&:before{ content: ""; }
-					}
-				}
-			}
-		}
-
-	}
-
-}
-
-
 
 //**********************************************************************
 // #simulations
@@ -512,5 +254,320 @@ article#price{
 
 }
 
+
+}
+
+
+//**********************************************************************
+// .priceDetails
+//**********************************************************************
+.priceDetails{
+
+	// table
+	//**************************************************************
+
+	table{
+
+		//h5
+		h5{
+			margin: 0;
+			font-size: $normal;
+		}
+
+		//tr
+		tr{
+			border-bottom: 1px dotted $gray;
+		}
+
+		// PC
+		@media all and (min-width: $minWidth){
+			//td
+			td{
+				&:last-of-type{
+					text-align: right;
+				}
+			}
+		}
+
+	}
+
+	// .linkMenu
+	//**************************************************************
+
+	.linkMenu {
+
+		// PC
+		@media all and (min-width: $minWidth){
+
+			margin-bottom: 1.5rem;
+			border-bottom: 1px solid rgba($black, .1);
+
+			//h4, .tab
+			h4, .tab{
+
+				float: left;
+				line-height: 1.0rem !important;
+				width: 175px;
+				margin: 0 !important;
+				padding: 0 !important;
+				border-top: 1px solid rgba($black, .1);
+				border-right: 1px solid rgba($black, .1);
+				font-size: 100%;
+				color: $darkGray;
+
+				&:first-child{
+					border-left: 1px solid rgba($black, .1);
+				}
+
+				a{
+					display: block;
+					padding: 1.0rem 0;
+					text-align: center;
+					color: $darkGray;
+					&:hover{
+						background: rgba($black, .05);
+					}
+				}
+
+			}
+
+			//h4
+			h4{
+
+				//a
+				a{
+					position: relative;
+					background: rgba($green, .1);
+					&:before{
+						position: absolute;
+						top: 0;
+						left: 0;
+						width: 100%;
+						border-top: 3px solid $green;
+						content: "";
+					}
+				}
+
+			}
+
+
+		}
+
+		// Mobile
+		@media all and (max-width: $maxWidth){
+
+			//a
+			a{
+				color: $darkGray;
+			}
+
+			//.tab
+			.tab{
+				display: none;
+			}
+
+		}
+
+	}
+
+	// .tabContents
+	//**************************************************************
+
+	.tabContents {
+		&:first-of-type{
+			margin-top: 5.0rem;
+		}
+		&:not(:last-of-type){
+			margin-bottom: 5.0rem;
+		}
+	}
+
+	// #itemCharges
+	//**************************************************************
+
+	#itemCharges{
+
+		//h6
+		h6{
+			text-align: center;
+		}
+
+		//table
+		table{
+			font-size: 90%;
+		}
+
+		//.itemEx
+		.itemEx{
+			line-height: 1.2em;
+			text-align: left !important;
+		}
+
+		//.itemChargesDetails
+		.itemChargesDetails{
+			margin-top: 2.0rem;
+			margin-bottom: 20px;
+			padding-top: 1.0rem;
+			border-top: 1px dashed rgba($black, .05);
+		}
+
+		//#electricApp
+		#electricApp{
+
+			//span[class^="icon-"]
+			span[class^="icon-"]{
+				display: block;
+				margin: 1rem 0;
+				font-size: $biggest * 2.5;
+				text-align: center;
+			}
+
+		}
+
+		//PC
+		@media all and (min-width: $minWidth){
+
+			//table
+			table{
+
+				border-top: 1px dotted $gray;
+
+				//tr
+				tr{
+					&:nth-of-type(2n){
+						background: rgba($black, .03);
+					}
+					&:last-of-type{
+						border-bottom-color: transparent;
+					}
+				}
+
+			}
+
+			//.rankCharge
+			.rankCharge{
+				margin-bottom: 20px;
+				padding-left: 0.5rem;
+				padding-right: 0.5rem;
+				padding-bottom: 0.5rem;
+				border: 1px solid $gray;
+				@include border-radius(6px);
+			}
+
+		}
+
+		//Mobile
+		@media all and (max-width: $maxWidth){
+
+			//.rankCharge
+			.rankCharge{
+
+				margin-bottom: 2.0rem;
+				padding-bottom: 2.0rem;
+
+				&:first-of-type{
+					margin-top: 2.0rem;
+				}
+
+				table{
+					tr{
+						display: table;
+						width: 100%;
+						table-layout: fixed;
+						th, td{
+							display: table-cell;
+							text-align: center;
+						}
+					}
+				}
+			}
+
+			//#electricApp
+			#electricApp{
+				th{
+					width: 180px;
+				}
+				td{
+					&:last-of-type{
+						width: 80px;
+						text-align: right;
+						border-bottom: 1px dotted $gray;
+					}
+				}
+			}
+
+			//#itemRank
+			#itemRank{
+				th{
+					width: 180px;
+				}
+				td{
+					&:last-of-type{
+						text-align: right;
+					}
+				}
+			}
+
+
+		}
+
+	}
+
+	// #spworksCharges
+	//**************************************************************
+
+	#spworksCharges{
+
+		table{
+
+			margin-top: 2.0rem;
+			margin-bottom: 2.0rem;
+			border-top: 1px dotted $gray;
+
+			//PC
+			@media all and (min-width: $minWidth){
+				th{
+					width: 240px;
+				}
+				td{
+					&:last-of-type{
+						width: 200px;
+					}
+				}
+			}
+
+		}
+
+	}
+
+	// #optionsCharges
+	//**************************************************************
+	#optionsCharges{
+
+		table{
+
+			margin-top: 2.0rem;
+			margin-bottom: 2.0rem;
+			border-top: 1px dotted $gray;
+
+			//PC
+			@media all and (min-width: $minWidth){
+				th{
+					width: 300px;
+				}
+				td{
+					&:last-of-type{
+						width: 80px;
+					}
+					&.split{
+						width: 180px;
+						text-align: right;
+					}
+				}
+			}
+
+		}
+
+	}
 
 }
