--- a/wp-content/themes/ecokaishu/_scss/pages/_article.scss
+++ b/wp-content/themes/ecokaishu/_scss/pages/_article.scss
@@ -389,6 +389,15 @@ h6{
 
 	}
 
+	// .footnote
+	//**************************************************************
+
+	.footnote{
+		clear: both;
+		padding-top: 2.0rem;
+		text-align: right;
+	}
+
 }
 
 
