--- a/wp-content/themes/ecokaishu/_scss/pages/_voice.scss
+++ b/wp-content/themes/ecokaishu/_scss/pages/_voice.scss
@@ -86,6 +86,8 @@
 				//.staffImg
 				.staffimg{
 					overflow: hidden;
+					display: block;
+					margin: 0 auto;
 					@include border-radius(50%);
 					@include box-sizing(border-box);
 					border: 1px solid rgba($black, .1);
