--- a/wp-content/themes/ecokaishu/_scss/style.scss
+++ b/wp-content/themes/ecokaishu/_scss/style.scss
@@ -127,3 +127,4 @@ $google: #D34836;
 @import "pages/voice.scss";
 @import "pages/lp.scss";
 @import "pages/unavailable.scss";
+@import "pages/purchase.scss";
