#40 feedback 2 and close

--- a/wp-content/themes/ecokaishu/_scss/pages/_purchase.scss
+++ b/wp-content/themes/ecokaishu/_scss/pages/_purchase.scss
@@ -66,7 +66,7 @@ article.purchase {
 }
 
 //**********************************************************************
-// Extend class
+// .purchaseDetails
 //**********************************************************************
 
 .purchaseDetails{
@@ -115,7 +115,7 @@ article.purchase {
 			padding-bottom: 3.0rem;
 			border-bottom: 1px dashed $gray;
 			&:first-of-type{
-				border: 10px solid;
+				margin-top: 3.0rem;
 			}
 		}
 
