--- a/wp-content/themes/ecokaishu/assets/css/fullwidth.css
+++ b/wp-content/themes/ecokaishu/assets/css/fullwidth.css
@@ -1,5 +1,16 @@
 @charset "UTF-8";
 
+@font-face {
+	font-family: 'icomoon';
+	src:url('../fonts/icomoon.eot?-vjcnd0');
+	src:url('../fonts/icomoon.eot?#iefix-vjcnd0') format('embedded-opentype'),
+		url('../fonts/icomoon.woff?-vjcnd0') format('woff'),
+		url('../fonts/icomoon.ttf?-vjcnd0') format('truetype'),
+		url('../fonts/icomoon.svg?-vjcnd0#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
 /***********************************************************************
 
 Common CSS
@@ -109,6 +120,88 @@ PC settings
 		background: #ffffff;
 		margin: 0 auto;
 	}
+	#fullwidth .intro {
+		background: url("../../assets/img/contact/bg.jpg") top right no-repeat;
+		padding: 2.5rem 0;
+		margin-top: 1rem;
+	}
+	#fullwidth .intro h3 {
+		border: none;
+		padding: 0;
+		margin: 0;
+		text-align: left;
+	}
+	#fullwidth .intro h3 img {
+		width: 35%;
+	}
+
+	
+	#fullwidth .intro dl dt {
+		font-size: 20px;
+		padding: 0.5rem 0;
+	}
+
+	#fullwidth .intro dl dd{
+		margin-left: 15px;
+		padding: 0.2rem 0;
+	}
+
+	#fullwidth .intro dl dd:before {
+		content: "\e862";
+		font-family: "icomoon";
+		margin-left: -15px;
+	}
+
+	#fullwidth .intro .titFlow {
+		font-size: 20px;
+	}
+
+	#fullwidth .intro ul li {
+		float: left;
+		width: 196px;
+		margin: 8px;
+		padding: 20px;
+		-webkit-border-radius: 6px;
+		-moz-border-radius: 6px;
+		border-radius: 6px;
+		border: #f2f2f2 solid 1px;
+		position: relative;
+	}
+	#fullwidth .intro ul li:before {
+		color: #e2318c;
+		content: "\e85a";
+		position: absolute;
+		top: 40%;
+		right: -18px;
+		font-family: "icomoon";
+	}
+	#fullwidth .intro ul li:last-of-type:before {
+		content: "";
+	}
+	#fullwidth .intro ul li h5 {
+		color: #e2318c;
+	}
+	#fullwidth .intro ul li h6 {
+		font-size: 17px;
+		margin: 0.5rem 0;
+	}
+	#fullwidth .intro ul li p {
+		margin: 0.5rem 0;
+	}
+
+	#fullwidth .intro .footnote p {
+		margin: 0;
+	}
+
+	#fullwidth .intro .download_1 {
+		float: left;
+		text-decoration: none;
+	}
+	#fullwidth .intro .download_2 {
+		float: right;
+		text-decoration: none;
+	}
+
 
 	/* #estimate2 */
 	#estimate2 #fullwidth article{
